#PK-745 Update GroupBuy create/edit page

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1948,7 +1948,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        @* <div class="row">
             <div class="col-2">
             </div>
             <div class="col-10">
@@ -1993,7 +1993,7 @@
                     </Blazored.TextEditor.BlazoredTextEditor>
                 </div>
             </div>
-        </div>
+        </div> *@
         <div class="row">
             <div class="col-2">
             </div>
