--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1910,7 +1910,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        @* <div class="row">
             <div class="col-2">
             </div>
             <div class="col-10">
@@ -1955,7 +1955,7 @@
                     </Blazored.TextEditor.BlazoredTextEditor>
                 </div>
             </div>
-        </div>
+        </div> *@
         <div class="row">
             <div class="col-2">
             </div>
