--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -283,7 +283,7 @@
                                     </Span>
                                 </TableHeaderCell>
                                  <TableHeaderCell Class="text-center">
-                                    @L["Cost"]
+                                    @L["ItemCost"]
                                     <Span Class="d-block pt-1 text-primary cursor-pointer"
                                           @onclick="() => CopyToAll(nameof(CreateItemDetailsDto.Cost))">
                                         @L["CopyToAll"]
