--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
@@ -266,6 +266,17 @@
                     <ValidationMessage For="@(() => EcPay.TradeDescription)" />
                 </div>
             </div>
+            <div class="row justify-content-center mb-2">
+                <div class="col-2 pt-2 text-end">
+                    <label class="form-label" for="trade-description"></label>
+                    @L["CreditCheckCode"]
+                    <span class="text-danger"> *</span>
+                </div>
+                <div class="col-6">
+                    <InputText id="credit-check-code" class="form-control" @bind-Value="EcPay.CreditCheckCode"></InputText>
+                    <ValidationMessage For="@(() => EcPay.CreditCheckCode)" />
+                </div>
+            </div>
             @if (IsEcPayNotExists)
             {
                 <div class="row mt-3">
