--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -767,8 +767,8 @@
                 <label class="form-check-label" for="payment-gateway-1">
                 @L["DefaultPaymentGateWay"]
                 </label> *@
-                <Check TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
-                <Check TValue="bool" @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
+                <Check TValue="bool" Disabled=@CreateGroupBuyDto.IsEnterprise @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
+                <Check TValue="bool" Disabled=@CreateGroupBuyDto.IsEnterprise @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
                 <Check TValue="bool"
                        @bind-Checked="@IsCashOnDelivery">
                     @L[PikachuResource.CashOnDelivery]
@@ -846,7 +846,12 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-2 form-label">@L["EnterprisePurchase"]</div>
-            <div class="col-4"> <Switch TValue="bool" @bind-Checked="@CreateGroupBuyDto.IsEnterprise"></Switch></div>
+            <div class="col-4"> 
+                <Switch TValue="bool" 
+                        Checked="@CreateGroupBuyDto.IsEnterprise" 
+                        CheckedChanged="OnEnterPriseChange" 
+                        CheckedExpression="@(() => CreateGroupBuyDto.IsEnterprise)" />
+            </div>
         </div>
         <div class="row">
             <div class="col-2"></div>
