#PK-759 Added description in Tenant Settings

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantFrontendInformation.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantFrontendInformation.razor
@@ -24,6 +24,16 @@
                                 </TextEdit>
                             </Field>
                         </Validation>
+                        <Validation MessageLocalizer="@LH.Localize">
+                            <Field>
+                                <FieldLabel>@L["Description"]</FieldLabel>
+                                <MemoEdit @bind-Text="Entity.Description" Rows="6">
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </MemoEdit>
+                            </Field>
+                        </Validation>
                     </Column>
                 </Row>
                 <Divider></Divider>
