--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -10,6 +10,7 @@
 @using Kooco.Pikachu.StoreLogisticOrders
 @using Microsoft.Extensions.Localization;
 @using Blazorise;
+@using Blazorise;
 @using Volo.Abp.AspNetCore.Components.Messages;
 @using Blazorise.LoadingIndicator;
 @using Kooco.Pikachu.Items.Dtos;
